// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style if disabled 1`] = `
<Input
  disabled={true}
  error={false}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={true}
    placeholder="placeholder"
    success={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "system-ui, sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <input
      className="sc-bdVaJa bYXmrN"
      disabled={true}
      placeholder="placeholder"
      type="text"
    />
  </styled.input>
</Input>
`;

exports[`should change its style if required 1`] = `
<Input
  disabled={false}
  error={false}
  placeholder="placeholder"
  required={true}
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    placeholder="placeholder"
    required={true}
    success={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "system-ui, sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <input
      className="sc-bdVaJa bYXmrN"
      disabled={false}
      placeholder="placeholder"
      required={true}
      type="text"
    />
  </styled.input>
</Input>
`;

exports[`should change its style on error 1`] = `
<Input
  disabled={false}
  error={true}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    placeholder="placeholder"
    success={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "system-ui, sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={true}
  >
    <input
      className="sc-bdVaJa ggggVk"
      disabled={false}
      placeholder="placeholder"
      type="text"
    />
  </styled.input>
</Input>
`;

exports[`should change its style on success 1`] = `
<Input
  disabled={false}
  error={false}
  placeholder="placeholder"
  success={true}
  type="text"
>
  <styled.input
    disabled={false}
    placeholder="placeholder"
    success={true}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "system-ui, sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <input
      className="sc-bdVaJa caUFFI"
      disabled={false}
      placeholder="placeholder"
      type="text"
    />
  </styled.input>
</Input>
`;

exports[`should render a input 1`] = `
<Input
  disabled={false}
  error={false}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    placeholder="placeholder"
    success={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "system-ui, sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".25rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <input
      className="sc-bdVaJa bYXmrN"
      disabled={false}
      placeholder="placeholder"
      type="text"
    />
  </styled.input>
</Input>
`;
